# WeatherstationGUI

./: CMakeLists.txt  README.md
WeatherstationGUI/src/: main.cpp
qml/: main.qml  qml.qrc
qml/ws2022/components/: PanoramaView.qml  qmldir
qml/wsgui/components/: PanoramaView.qml  WeatherDataDisplay.qml  WindDirectionDisplay.qml  qmldir
resources/: resources.qrc
src/: application.cpp  application.h  downloadproxy.cpp  downloadproxy.h  main.cpp  panomaximageprovider.cpp  panomaximageprovider.h  qmldownload.cpp  qmldownload.h  system.cpp  system.h
src/data/: i2cweatherdataprovider.cpp  i2cweatherdataprovider.h  mockweatherdataprovider.cpp  mockweatherdataprovider.h  mqttweatherdataprovider.cpp  mqttweatherdataprovider.h  qmlweatherdata.cpp  qmlweatherdata.h  weatherdatamanager.cpp  weatherdatamanager.h  weatherdataprovider.cpp  weatherdataprovider.h
